# System-Programming-Labratory

./: README.md
Assignment-1/: CMakeLists.txt  Main.cpp  config0.txt  config2.txt  config3.txt  input_example.txt  input_example2.txt  input_example3.txt  makefile  myOutput.txt  output2  output_example2.txt  scenario2.docx  scenario3.docx  scenario4.docx  scenario5.docx  script.sh
Assignment-1/files/: log.txt
Assignment-1/files/config/: myConfig1.txt  myConfig2.txt  myConfig3.txt  myConfig_emptyLines.txt
Assignment-1/files/input/: input2_justOrder.txt  input3.txt  input4.txt  input5.txt  input6.txt  input_justOrder_empty.txt
Assignment-1/files/output/: output.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output_empty.txt  output_example1.txt  output_example2.txt
Assignment-1/include/: Action.h  Customer.h  Dish.h  Logger.h  Restaurant.h  Table.h
Assignment-1/src/: Action.cpp  Customer.cpp  Dish.cpp  Logger.cpp  Main.cpp  Restaurant.cpp  Table.cpp
Assignment-2/: pom.xml  script.sh
Assignment-2/files/: input_example1  output_books.ser  output_customers.ser  output_moneyRegister.ser  output_orderReceipt.ser
Assignment-2/jsonfiles/: 13.json  14.json
Assignment-3/Client/: CMakeLists.txt  makefile
Assignment-3/Client/include/: Task.h  connectionHandler.h  message.h  messageDecoder.h  messageEncoder.cpp  messageEncoder.h
Assignment-3/Client/src/: Task.cpp  connectionHandler.cpp  echoClient.cpp  message.cpp  messageDecoder.cpp  messageEncoder.cpp
Assignment-4/: create_db.py  dbtools.py  persistence.py  schedule.py
(+109 files in other folders)
